--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -98,7 +98,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .menu-drawer__navigation {
-  padding: 5.6rem 0;
+  /* padding: 5.6rem 0; */
 }
 
 .menu-drawer__inner-submenu {
@@ -124,7 +124,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .menu-drawer__menu-item {
-  padding: 1.1rem 3.2rem;
+  padding: 1.4rem 3.2rem;
   text-decoration: none;
   font-size: 1.8rem;
 }
