--- a/assets/base.css
+++ b/assets/base.css
@@ -2682,15 +2682,11 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item {
-  color: var(--color-foreground);
+  color: #000;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.2em;
   font-size: 16px;
-}
-
-.header__menu-item:hover {
-  color: rgb(var(--color-foreground));
 }
 
 .header__menu-item span {
