--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -1,29 +1,40 @@
 
 <style>
   .slider {
-    background: #000;
+    background: rgb(var(--color-foreground));
   }
-  .slide-item {
+  .announcement-item {
     width: 100%;
     height: 20px;
     line-height: 20px;
     text-align: center;
-    counter-increment: carousel-cell;
     color: #fff;
+    background: rgb(var(--color-foreground)) !important;
   }
 </style>
 <div class="announcement-bar">
   <div class="page-width">
-    <div class="slider" data-flickity='{ "wrapAround": true, "autoPlay": 3000, "prevNextButtons": false, "pageDots": false}'>
-      <div class="slide-item">
-        <span class="announcement-text">Free shipping</span> <span class="announcement-link-text">On all orders over $100</span>
-      </div>
-      <div class="slide-item">
-        <span class="announcement-text">10% off outerwear</span> <span class="announcement-link-text">Stay warm this fall</span>
-      </div>
-      <div class="slide-item">
-        <span class="announcement-text">Hassle-free returns</span> <span class="announcement-link-text">30-day postage paid returns</span>
+    <div class="slider">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide announcement-item">
+          <span class="announcement-text">Free shipping</span> <span class="announcement-link-text">On all orders over $100</span>
+        </div>
+        <div class="swiper-slide announcement-item">
+          <span class="announcement-text">10% off outerwear</span> <span class="announcement-link-text">Stay warm this fall</span>
+        </div>
+        <div class="swiper-slide announcement-item">
+          <span class="announcement-text">Hassle-free returns</span> <span class="announcement-link-text">30-day postage paid returns</span>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<script>
+  new Swiper(".slider", {
+      speed: 1000,
+      autoplay: {
+        delay: 3000,
+      },
+      loop: true,
+  });
+</script>
